network/networkpolicy.yaml
---
# Règle 1 : VM3 DB accepte UNIQUEMENT VM2 Web sur port 3306
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-web-only
  namespace: fallilou-dev
spec:
  podSelector:
    matchLabels:
      app: vm3-db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vm2-web
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: vm2-web
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# Règle 2 : VM2 Web — accès HTTP entrant + sortie Internet
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-policy
  namespace: fallilou-dev
spec:
  podSelector:
    matchLabels:
      app: vm2-web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: vm3-db
      ports:
        - protocol: TCP
          port: 3306
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# Règle 3 : VM3 DB bloque tout accès direct Internet
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-deny-internet
  namespace: fallilou-dev
spec:
  podSelector:
    matchLabels:
      app: vm3-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: vm2-web
---
# Règle 4 : VM1 Firewall — autoriser tout le trafic de gestion
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: firewall-policy
  namespace: fallilou-dev
spec:
  podSelector:
    matchLabels:
      app: vm1-firewall
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - {}
